[project]
name = "depsland"
version = "0.11.0a1"
description = "User oriented dependency management and application distribution tool."
license = "MIT"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
# readme = "README.md"
packages = [{ include = "depsland" }]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.scripts]
depsland = 'depsland.__main__:_cli'

[project.urls]
homepage = "https://github.com/likianta/depsland"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^1.1.0"
conflore = "^0.2.2"
lk-logger = "^6.0.7"
lk-utils = "^3.4.2"
oss2 = "^2.19.1"
pip = [
    { version = "^25.3.0", python = "^3.9" },
    { version = "^24.0.0", python = "<3.9" },
]
poetry = [
    { version = "^2.2.1", python = "^3.10" },
    { version = "<2.0.0", python = "<3.10" },
]
psutil = "^7.0.0"
pyportable-crypto = "^1.5.0"
semver = "^3.0.4"
streamlit = [
    { version = "^1.51.0", python = ">=3.11,<4.0" },
    { version = "^1.50.0", python = ">=3.10,<3.11" },
    { version = ">=1.40.0,<1.45.0", python = ">=3.8,<3.10,!=3.9.7" },
]
streamlit-canary = "^0.1.0"
streamlit-extras = { version = "^0.6.0", python = "!=3.9.7" }
# streamlit-nested-layout = { version = "^0.1.4", python = "!=3.9.7" }
streamlit-tree-select = "^0.0.5"
toml = { version = "^0.10.0", python = "<3.11" }  # <- for lk_utils.fs
tree-shaking = { version = "^0.2.2", python = "^3.12" }
windows-toasts = { version = "^1.0.0", platform = "win32" }

[tool.poetry.group.dev.dependencies]
# airmise = { version = "^2.0.0", source = "likianta" }
argsense = { version = "^1.1.1a0", source = "likianta" }
conflore = { version = "^0.2.2", source = "likianta" }
freesimplegui = "^5.2.0.post1"
icnsutil = "^1.1.0"  # <- sidework/image_converter.py
ipython = { version = "^9.7.0", python = "^3.12" }
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
lk-utils = { version = "^3.4.3a1", source = "likianta" }
matplotlib = { version = "^3.10.5", python = "^3.10" }  # to support numpy 2.x, used by pyinstaller
nuitka = "^2.8.1"
pillow = { version = "^11.0.0", python = "^3.12" }  # <- sidework/image_converter.py
# pinkrain = { version = "^0.0.0a32", source = "likianta" }
pyapp-window = { version = ">=2.1.4,<2.2.0", source = "likianta" }
pyinstaller = { version = "^6.15.0", python = ">=3.12,<3.15" }
pyinstrument = "^5.0.3"
pyportable-crypto = { version = "^1.5.1a0", source = "likianta" }
pyside6 = { version = "^6.10.0", python = ">=3.12,<3.14" }  # <- demo/hello-world-gui
# pysimplegui = "^5.0.7"  # <- demo/hello-world-tkinter
qmlease = { version = "^3.1.0a42", source = "likianta" }  # <- demo/hello-world-gui
streamlit-canary = { version = "^0.1.1a4", source = "likianta" }
tree-shaking = { version = "^0.2.2", python = "^3.12", source = "likianta" }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[tool.poetry-extensions]
ignore-unused-packages = ["poetry"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
