[project]
name = "depsland"
version = "0.11.0"
description = "User oriented dependency management and application distribution tool."
license = "MIT"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
# readme = "README.md"
packages = [{ include = "depsland" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
depsland = 'depsland.__main__:_cli_entrance'

[project.urls]
homepage = "https://github.com/likianta/depsland"

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^1.1.0"
conflore = "^0.2.2"
lk-logger = "^6.0.7"
lk-utils = "^3.5.2"
oss2 = "^2.19.1"
pip = "^26.0.0"
poetry = "^2.3.2"
psutil = "^7.0.0"
pyapp-window = "^2.2.0"
pyportable-crypto = "^1.5.1"
semver = "^3.0.4"
streamlit = "^1.55.0"
streamlit-canary = "^0.2.1"
streamlit-extras = { version = "^0.7.8", python = ">=3.12,<3.14" }
# streamlit-extras = [
#     { version = "^0.7.8", python = ">=3.12,<3.14" },
#     { version = "^0.6.0", python = ">=3.14" },
# ]
streamlit-tree-select = "^0.0.5"
tree-shaking = "^0.2.4"
windows-toasts = { version = "^1.0.0", platform = "win32" }

[tool.poetry.group.dev.dependencies]
# airmise = { version = "^2.0.1a1", source = "likianta" }
argsense = { version = "^1.1.1a0", source = "likianta" }
conflore = { version = "^0.2.2", source = "likianta" }
freesimplegui = "^5.2.0.post1"
icnsutil = "^1.1.0"  # <- sidework/image_converter.py
ipython = "^9.12.0"
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
lk-utils = { version = "^3.5.2", source = "likianta" }
nuitka = "^2.8.1"
pillow = "^11.0.0"  # <- sidework/image_converter.py
# pinkrain = { version = "^0.0.0a32", source = "likianta" }
pyapp-window = { version = "^2.2.0", source = "likianta" }
# pyinstaller = { version = "^6.15.0", python = ">=3.12,<3.15" }
pyinstrument = "^5.1.2"
pyportable-crypto = { version = "^1.5.1", source = "likianta" }
# pysimplegui = "^5.0.7"  # <- demo/hello-world-tkinter
qmlease = { version = "^4.0.0a1", source = "likianta", extras = ["ui"] }
reflex = "^0.8.28.post1"
streamlit-canary = { version = "^0.2.1", source = "likianta" }
tree-shaking = { version = "^0.2.5a1", source = "likianta" }

numpy = "^2.4.4"  # <- streamlit, python 3.14
rpds-py = "^0.30.0"  # <- streamlit, python 3.14

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[tool.poetry-extensions]
ignore-unused-packages = ["poetry"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
