[project]
name = "depsland"
version = "0.12.0a22"
description = "User oriented dependency management and application distribution tool."
license = "MIT"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
# readme = "README.md"
packages = [{ include = "depsland" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
depsland = 'depsland.__main__:_cli_entrance'

[project.urls]
homepage = "https://github.com/likianta/depsland"

[tool.poetry.dependencies]
python = "^3.12"
# airmise = "^3.0.0"
argsense = "^1.1.1"
conflore = "^0.2.2"
lk-utils = "^3.5.2"
# neoprint = ...  # TODO
oss2 = "^2.19.1"
pip = "^26.0.0"
poetry = "^2.3.2"
psutil = "^7.0.0"
pyapp-window = "^2.2.1"
pyportable-crypto = "^1.5.1"
semver = "^3.0.4"
streamlit = "^1.58.0"
# streamlit-arborist = "^0.3.0"
# streamlit-canary = "^0.2.1"
streamlit-extras = "^1.4.1"
# streamlit-tree-select = "^0.0.5"
tree-shaking = "^0.2.5"
windows-toasts = { version = "^1.0.0", platform = "win32" }

[tool.poetry.group.dev.dependencies]
airmise = { version = "^3.0.0b17", source = "likianta" }
argsense = { version = "^1.2.0a6", source = "likianta" }
conflore = { version = "^0.2.2", source = "likianta" }
freesimplegui = "^5.2.0.post1"
icnsutil = "^1.1.0"  # <- sidework/image_converter.py
ipython = "^9.13.0"
lk-utils = { version = "^3.6.0b14", source = "likianta" }
neoprint = { version = "^0.1.0a33", source = "likianta" }
nuitka = "^4.1.1"
pillow = "^12.2.0"  # <- sidework/image_converter.py
# pinkrain = { version = "^0.0.0a32", source = "likianta" }
py7zr = "^1.1.0"
pyapp-window = { version = "^2.2.3a0", source = "likianta" }
# pyinstaller = { version = "^6.15.0", python = ">=3.12,<3.15" }
pyinstrument = "^5.1.2"
pyportable-crypto = { version = "^1.5.2a1", source = "likianta" }
# pysimplegui = "^5.0.7"  # <- demo/hello-world-tkinter
# qmlease = { version = "^4.0.0a6", source = "likianta", extras = ["ui"], python = "^3.14" }
# reflex = "^0.9.0"
streamlit-canary = { version = "^0.3.0a16", source = "likianta" }
tree-shaking = { version = "^0.2.6a0", source = "likianta" }

# numpy = "^2.4.4"  # <- streamlit, python 3.14
# rpds-py = "^0.30.0"  # <- streamlit, python 3.14
zstandard = "^0.25.0"  # <- nuitka onefile mode

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[tool.poetry-extensions]
ignore-unused-packages = ["poetry"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["E701"]

[tool.ruff.lint.isort]
force-single-line = true
# no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ty.rules]
invalid-type-form = "ignore"
unresolved-attribute = "ignore"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
