[tool.poetry]
name = "hello-world-tkinter"
version = "0.3.0"
description = ""
authors = ["Likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "hello_world_tkinter" }]

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^0.7.2"
pysimplegui = "^5.0.8"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
