[project]
name = "hello-world-tkinter"
version = "0.5.0"
description = ""
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^1.1.1"
# freesimplegui = "^5.2.0.post1"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

# [[tool.poetry.source]]
# name = "likianta"
# url = "http://localhost:2191/"
# priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
