[tool.poetry]
name = "hello-world"
version = "0.5.0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
 readme = "readme.md"
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^0.5.8"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
