[project]
name = "depsland-online-installer"
version = "0.1.0"
description = ""
# readme = "README.md"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
packages = [{ include = "depsland_online_installer" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]
# license = "MIT"

# [project.urls]
# homepage = "https://github.com/likianta/depsland-online-installer"

[tool.poetry.dependencies]
python = "^3.12"
airmise = { version = "^3.0.0b2", source = "likianta" }
argsense = { version = "^1.1.1", source = "likianta" }
lk-utils = { version = "^3.6.0a19", source = "likianta" }
py7zr = "^1.1.0"  # <- lk_utils.fs.zip

[tool.poetry.group.dev.dependencies]
nuitka = "^4.0.8"
psutil = "^7.2.2"
tree-shaking = { version = "^0.2.5b0", source = "likianta" }
zstandard = "^0.25.0"  # nuitka onefile mode required

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["E701"]

[tool.ruff.lint.isort]
force-single-line = true
# no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
