[project]
name = "lk-utils-7z-unzip"
version = "0.0.0"
description = ""
# readme = "README.md"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
packages = [{ include = "lk_utils_7z_unzip" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]
# license = "MIT"

# [project.urls]
# homepage = "https://github.com/likianta/lk-utils-7z-unzip"

[tool.poetry.dependencies]
python = "^3.12"
lk-utils = { version = "^3.6.0a18", source = "likianta" }
py7zr = "^1.1.0"

[tool.poetry.group.dev.dependencies]
tree-shaking = { version = "^0.2.5b1", source = "likianta" }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
