[package]
name = "rust-launcher"
version = "0.1.0"
edition = "2024"
default-run = "rust-launcher"
# build = "src/build_slint.rs"

[dependencies]
dioxus = "0.6.3"
# dioxus-primitives = "0.0.0"
# egui = "0.31.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
# serde = { version = "1.0.219", features = ["derive"] }
# serde_derive = "1.0.219"
serde_json = "1.0.140"
# slint = "1.12.0"
zip = "4.3.0"
# zip-extensions = "0.8.3"

# [build-dependencies]
# slint-build = "1.12.0"
